# quadratic2

./: pyproject.toml
.github/workflows/: ci.yaml
quadratic2/: __init__.py  __main__.py
tests/: test_quad.py
