[tool.poetry]
name = "quadratic2"
version = "0.1.0"
description = ""
authors = ["Yves Chevallier <yves.chevallier@heig-vd.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.8"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
